--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GAMT cursos</title>
+    <link rel="icon" href="public/gamt-logo-removebg-preview.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <title>GAMT Academy</title>
   </head>
   <body>
     <div id="root"></div>
